# sqlx

.github/workflows/: pypi-release.yml
sqlx-cli/pypi/: pyproject.toml
